--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.trackabuddy.MainActivity$PlaceholderFragment" >
+    tools:context="com.example.trackabuddy.MainActivity"
+    tools:ignore="MergeRootFrame" >
 
     <TextView
         android:layout_width="wrap_content"
