Populating Buddy List from Parse DB.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,9 +9,14 @@
     tools:context="com.example.trackabuddy.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <TextView
+    <fragment
+        android:id="@+id/buddyListFragment"
+        android:name="com.codepath.apps.trackabuddy.fragments.BuddyListFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp"
+        tools:layout="@layout/fragment_buddylist" />
 
 </RelativeLayout>
