--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,14 +10,13 @@
     tools:context="com.example.trackabuddy.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <fragment
-        android:id="@+id/buddyListFragment"
-        android:name="com.codepath.apps.trackabuddy.fragments.BuddyListFragment"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"
-        tools:layout="@layout/fragment_buddylist" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" >
 
+    </FrameLayout>
+    
 </RelativeLayout>
