--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,4 +19,14 @@
         android:layout_marginTop="64dp"
         tools:layout="@layout/fragment_buddylist" />
 
+    <Button
+        android:id="@+id/btnTrack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buddyListFragment"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="79dp"
+        android:onClick="onTrackClick"
+        android:text="Send Tracking Request" />
+
 </RelativeLayout>
