--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,25 +9,6 @@
     tools:context="com.example.trackabuddy.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <Button
-        android:id="@+id/btnTrackAkash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/btnTrackSadhana"
-        android:onClick="onTrackClick"
-        android:text="Track Akash" />
-
-    <Button
-        android:id="@+id/btnTrackSadhana"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/buddyListFragment"
-        android:layout_marginTop="16dp"
-        android:onClick="onTrackClick"
-        android:text="Track Sadhana" />
-
     <fragment
         android:id="@+id/buddyListFragment"
         android:name="com.codepath.apps.trackabuddy.fragments.BuddyListFragment"
@@ -37,5 +18,37 @@
         android:layout_below="@+id/btnTrackAkash"
         android:layout_marginTop="15dp"
         tools:layout="@layout/fragment_buddylist" />
+
+    <Button
+        android:id="@+id/btnTrackAkash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:onClick="onTrackClick"
+        android:text="Track Akash"
+        android:textSize="10sp" />
+
+    <Button
+        android:id="@+id/btnTrackSadhana"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btnTrackVasanthy"
+        android:layout_alignBottom="@+id/btnTrackVasanthy"
+        android:layout_toRightOf="@+id/btnTrackVasanthy"
+        android:onClick="onTrackClick"
+        android:text="Track Sadhana"
+        android:textSize="10sp" />
+
+    <Button
+        android:id="@+id/btnTrackVasanthy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btnTrackAkash"
+        android:layout_alignBottom="@+id/btnTrackAkash"
+        android:layout_toRightOf="@+id/btnTrackAkash"
+        android:onClick="onTrackClick"
+        android:text="Track Vasanthy"
+        android:textSize="10sp" />
     
 </RelativeLayout>
