Modified action bar color

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,15 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+
+
+    <style name="MyCustomTheme" parent="@android:style/Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/MyActionBarTheme</item>
+    </style>
+
+    <style name="MyActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#FE2E2E</item>
+        <item name="android:backgroundSplit">#FE2E2E</item>
+    </style>
+
 </resources>
