--- a/res/menu/contacts_settings.xml
+++ b/res/menu/contacts_settings.xml
@@ -7,6 +7,7 @@
         android:orderInCategory="100"
         android:showAsAction="ifRoom|withText"
         android:icon="@drawable/ic_contacts"
+        android:onClick="onClickContacts"
         android:title="Contacts"/>
     <item
         android:id="@+id/home"
